# pomodoro-tracker

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs
src/lib/components/: Analytics.svelte  DailyView.svelte  PomodoroTimer.svelte
src/lib/stores/: sessions.js  sessions.ts  timer.ts
