[package]
name = "pomodoro-tracker"
version = "0.1.0"
description = "Pomodoro timer with activity tracking"
authors = ["Your Name"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "notification-all", "window-all", "path-all", "fs-read-file", "fs-write-file", "fs-create-dir"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
